[package]
name = "dot_rs"
version = "0.1.0"
edition = "2024"
description = "A Dot Binding Writtern in Rust"
license = "Apache-2.0"
homepage = "https://github.com/ashyanSpada/dot_rs"
keywords = [
    "dot",
    "graphviz",
]
repository = "https://github.com/ashyanSpada/dot_rs"
documentation = "https://docs.rs/expression_engine/latest/expression_engine/"

[dependencies]
